--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
 	"require":
 	{
 		"silverstripe/framework": "3.*",
-		"silverstripe/cms": "3.*",
-		"silverstripe/dms": "*"
+		"silverstripe/cms": "3.*"
 	}
 }
